# TikTokLiveRust

./: Cargo.toml
build-script/: Cargo.toml
build-script/src/: event_models_loader.rs  events_generator.rs  main.rs
src/: data.rs  lib.rs  main.rs
src/core/: live_client.rs  live_client_builder.rs  live_client_events.rs  live_client_http.rs  live_client_mapper.rs  live_client_websocket.rs
src/data/: live_common.rs
src/http/: http_data.rs  http_data_mappers.rs  http_request_builder.rs
