[package]
name = "build-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.2"
log = "0.4"
env_logger = "0.10"
quote = "1"
reqwest = "0.11"
urlencoding = "2"
serde = "1"
serde_json = "1"
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
bytes = "1"

protobuf-codegen = "=3.3.0"
protoc-bin-vendored = "3"
protobuf = { version = "3", features = ["bytes"] }

url = "2"
tungstenite = "0.16"
proc-macro2 = "1"
syn = "2"

[build-dependencies]
protobuf-codegen = "=3.3.0"
protoc-bin-vendored = "3.0.0"
